fix(desktop): contact data spacing

--- a/src/app/components/footer/footer.style.scss
+++ b/src/app/components/footer/footer.style.scss
@@ -213,7 +213,7 @@
 
       &-data {
         display: flex;
-        justify-content: space-around;
+        gap: 39px;
       }
     }
 
